<resources>
    <string name="app_name">GuessThatChord</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="returnToHome">Return to menu</string>
    <string name="about_description">GuessThatChord is an ear training tool for those who want to practice their chord recognition skills. </string>
    <string name="about_description2">For each question, try to identify the chord that is played without any reference to another. </string>
    <string name="about_description3">Practice daily to master perfect pitch!</string>
    <string name="optionA">Option A</string>
    <string name="optionB">Option B</string>
    <string name="optionC">Option C</string>
    <string name="optionD">Option D</string>
    <string name="correct">Correct answer!</string>
    <string name="wrong">Wrong answer!</string>
    <string name="nextQuestion">Next Question</string>
    <string name="tryAgain">Try again</string>
    <string name="thanks">Thanks for playing!</string>
    <string name="answered">You have answered all the questions correctly!</string>
    <string name="mcq">Multiple choice</string>
    <string name="stt">Speech to text</string>
    <string name="mic">Press here to answer</string>
    <string name="hint">Give me a hint</string>
    <string name="prompt">Please specify the chord type (major, minor, etc) in your answer</string>
    <string name="emptyStr"> </string>
</resources>
